--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,23 @@
 .card {
   display: block;
+  margin-bottom: 1rem;
 }
 
 .btn {
+  border-radius: 12px;
+  border: 0px;
   width: fit-content;
+  border: 0px;
+  padding: 5px 10px;
 }
 
 a {
   color: white;
+}
+
+.spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
