--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .btn {
   border-radius: 12px;
   border: 0px;
-  width: fit-content;
+  /* width: fit-content; */
   border: 0px;
   padding: 5px 10px;
 }
