--- a/src/App.scss
+++ b/src/App.scss
@@ -149,3 +149,11 @@ ul {
   list-style-type: none;
   padding-inline-start: 0px;
 }
+.repo {
+  height: 3rem;
+  margin-top: 2rem;
+  padding: 10px 20px;
+  a {
+    color: #61677c;
+  }
+}
